# threatlens

./: .dockerignore  .env.example  .gitignore  DEFENSE_CHEATSHEET.md  Dockerfile  LICENSE  Procfile  README.md  SUBMISSION.md  docker-compose.yml  pyproject.toml  railway.json  requirements-ml.txt  requirements.txt
.github/workflows/: tests.yml
data/: cache.db
data/sandbox_malware/: metadata.frozen.jsonl
docs/: README.md  adversarial_baseline.md  adversarial_compare.md  architecture.md  cross_dataset_eval.md  day10_web_app_integration.md  day11_metrics_and_docs.md  day12_buffer_and_submission.md  day13_sandbox_ingestion.md  day4_yara_synergy.md  day5_combined_retrain.md  day6_real_world_reeval.md  day7_drift_diagnostic.md  day8_selective_prediction.md  day9_python_only_retrain.md  diploma.md  drift_monitor_design.md  external_benchmark.md  improvement_plan.md  real_world_eval.md  synthetic_eval.md  test_report_2026-04-23.md
results/: cross_dataset_eval.json  cross_dataset_thursday_infiltration.json  cross_dataset_wednesday_brute.json  feature_drift_diag.json  real_world_eval.json  real_world_eval_ab.json  selective_eval.json  selective_sweep.json  synthetic_sanity.json
results/cicids2017/: baseline_comparison.csv  comparison.csv  cv_results.csv  feature_pipeline.joblib  isolation_forest.joblib  metrics.json  xgboost.joblib
results/combined_v2/: comparison.csv  feature_pipeline.joblib  head_to_head.json  mahalanobis_abstainer.joblib  metrics.json
results/external_benchmark/: external_benchmark.json
results/python_only/: active_learning_demo.json  adversarial_eval.json  adversarial_eval.md  attack_volume_flows.parquet  bootstrap_ci.json  bootstrap_ci.md  diverse_benign_flows.parquet  feature_pipeline.joblib  mahalanobis_abstainer.joblib  mahalanobis_abstainer_summary.json  metrics.json  real_world_eval.json  sandbox_eval.json  sandbox_holdout_flows.parquet  sandbox_malware_flows.parquet  sandbox_split.json  sandbox_train_flows.parquet  workload_metric.json  xgboost.joblib
results/v2/: ab_vs_python_only.md  adversarial_eval.json  adversarial_eval.md  bootstrap_ci.json  bootstrap_ci.md  ctu_test_holdout.parquet  feature_pipeline.joblib  mahalanobis_abstainer.joblib  mahalanobis_abstainer_summary.json  metrics.json  real_world_eval.json  sandbox_eval.json  sandbox_holdout_eval.json  workload_metric.json  xgboost.joblib
scripts/: README.md  active_learning_demo.py  adversarial_compare.py  adversarial_eval.py  bootstrap_ci.py  check_submission_consistency.py  compare_baselines.py  demo_benchmark.py  diag_feature_drift.py  download_yara_rules.py  drift_monitor.py  eval_combined.py  eval_cross_dataset.py  eval_python_only.py  eval_real_world.py  eval_real_world_ab.py  eval_sandbox.py  eval_selective.py  eval_selective_sweep.py  external_benchmark.py  extract_attack_volume.py  extract_diverse_benign.py  extract_long_tail.py  extract_sandbox_pcaps.py  fit_selective.py  fit_selective_python_only.py  generate_attack_volume.py  generate_diverse_benign.py  generate_long_tail.py  ingest_sandbox_pcaps.py  make_analysis_plots.py  make_screenshots.py  perturb_pcap.py  split_sandbox.py  train_combined.py  train_python_only.py  workload_metric.py
scripts/synthetic/: Dockerfile.attacker  Dockerfile.victim  README.md  check_spectral_discrimination.py  docker-compose.yml  extract_flows.py  generate.py  netem.sh  sanity_check.py
tests/: conftest.py  create_test_zip.py  profile_scan.py  test_analyzers.py  test_archives.py  test_archives_pytest.py  test_cache.py  test_core.py  test_detector.py  test_explanations.py  test_flow_extractor.py  test_full.py  test_heuristic.py  test_payload_yara.py  test_repo_analyzer.py  test_sandbox_ingest.py  test_selective.py  test_spectral_features.py  test_web_api.py
tests/calibration/: calibration_results.json  generate_samples.py  run_calibration.py
threatlens/: __init__.py  __main__.py  cache.py  core.py
web/: app.py
(+53 files in other folders)
