[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatlens"
version = "0.1.0"
description = "AI-Powered File Threat Analyzer — explains what suspicious files do in human language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Maxim Melnikov", email = "maxmelnikov@example.com"},
]
keywords = ["security", "malware", "analysis", "yara", "threat", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pefile>=2024.8.26",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "rich>=14.0.0",
]

[project.optional-dependencies]
yara = ["yara-python>=4.5.0"]
office = ["oletools>=0.60.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.32.0", "python-multipart>=0.0.12"]
# Network IDS module: PCAP -> flow features -> ML predictions
ml = [
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    "shap>=0.46.0",
    "matplotlib>=3.9.0",
]
network = [
    "scapy>=2.7.0",
    "cicflowmeter>=0.5.0",
]
all = [
    "yara-python>=4.5.0", "oletools>=0.60.0",
    "fastapi>=0.115.0", "uvicorn>=0.32.0", "python-multipart>=0.0.12",
    "scikit-learn>=1.5.0", "xgboost>=2.1.0", "pandas>=2.2.0", "numpy>=1.26.0",
    "joblib>=1.4.0", "shap>=0.46.0", "matplotlib>=3.9.0",
    "scapy>=2.7.0", "cicflowmeter>=0.5.0",
    "pyzipper>=0.3.6",
]

[project.scripts]
threatlens = "threatlens.__main__:main"

[project.urls]
Homepage = "https://github.com/MaximkaVLG/threatlens"
Repository = "https://github.com/MaximkaVLG/threatlens"
Issues = "https://github.com/MaximkaVLG/threatlens/issues"

[tool.setuptools.packages.find]
include = ["threatlens*"]

[tool.setuptools.package-data]
threatlens = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "rules/yara_rules/*.yar",
]
